Bug 1287075 - Back out bug 1273250, part 4 for regressing the rendering of the Australis submenus. r=mstange, a=gchang

MozReview-Commit-ID: 1m8lVoIX3qT